--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -118,6 +118,79 @@
   font-size: 1.5rem;
 }
 
+.wrapper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 200px;
+
+  .glitch{
+    color: black;
+    font-family: sans-serif;
+    font-weight: 800;
+    position: relative;
+    font-size: 100px;
+    padding: 30px;
+    }
+  .glitch::before,
+  .glitch::after{
+    padding: 30px;
+    color: black;
+    content: "爆弾を探し、脱出せよ";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: yellow;
+    overflow: hidden;
+    top: 0;
+  }
+
+  .glitch::before
+  {
+    left: 3px;
+    text-shadow: -2px 0 red;
+    animation-name: glitch-animation-1;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: reverse-alternate;
+  }
+
+  .glitch::after
+  {
+    left: -3px;
+    text-shadow: -2px 0 blue;
+    animation-name: glitch-animation-2;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: reverse-alternate;
+  }
+}
+
+@keyframes glitch-animation-1{
+  $steps: 20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))} {
+      clip: rect(random(150)+px, 230px, random(150)+px, 30px);
+    }
+  }
+}
+
+@keyframes glitch-animation-2{
+  $steps: 20;
+  @for $i from 0 through $steps
+  {
+    #{percentage($i*(1/$steps))}{
+      clip: rect(random(150)+px, 230px, random(150)+px, 30px)
+    }
+  }
+}
+
 .code {
   background: #fafafa;
   border-radius: 5px;
