--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -138,7 +138,7 @@
   .glitch::after{
     padding: 30px;
     color: black;
-    content: "爆弾を探し、脱出せよ";
+    content: "爆弾を探し、生き残れ！";
     position: absolute;
     width: 100%;
     height: 100%;
