--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,17 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100%;
+}
+head{
+  height: 0;
+  width: 0;
+}
+
+#__next {
+  height: 100%;
+  margin:0;
+  padding:0;
 }
 
 a {
