--- a/styles/esc.module.scss
+++ b/styles/esc.module.scss
@@ -18,4 +18,40 @@
     font-size: 25px;
     text-align: center;
     width: 100%;
+    p{
+        margin: 0;
+        padding: 0;
+    }
+}
+
+.textBox{
+    margin:0;
+    padding:0;
+    display: flex;
+    textarea{
+        margin:0;
+        padding:0;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        height: 100%;
+        font-size: 25px;
+    }
+}
+
+.answerButton{
+    margin:0;
+    padding:0;
+    margin-top: 20px;
+    display: flex;
+
+    .ansBtn{
+        margin:0;
+        padding:0;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        height: 100%;
+        font-size: 25px;
+    }
 }
