--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,16 +6,6 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100%;
 }
-head{
-  height: 0;
-  width: 0;
-}
-
-#__next {
-  height: 100%;
-  margin:0;
-  padding:0;
-}
 
 a {
   color: inherit;
@@ -26,12 +16,9 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+  min-height: 100vh;
+  min-width: 100vw;
+  color: white;
+  background: black;
 }
