--- a/styles/esc.module.scss
+++ b/styles/esc.module.scss
@@ -1,3 +1,6 @@
+// Font
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+
 @import "~compass-mixins/lib/compass/css3";
 
 /* Play with speed and easing of the animation */
@@ -198,14 +201,29 @@ $digit-height: 100%;
     background: linear-gradient(192.05deg, #000F35 0%, #000000 50%, #1F0029 100%);
     min-width: 100vw;
     min-height: 100vh;
+    padding: 0 1rem;
+}
+
+.keyboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
+    padding: 7%;
+
+    .keys{
+        width: 33.3%;
+        text-align: center;
+        background: linear-gradient(192.05deg, #000F35 0%, #000000 50%, #1F0029 100%);
+    }
 }
 
 .mono {
-    font-family: "Ubuntu Mono";
+    font-family: 'Ubuntu Mono', monospace;
     font-size:24px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 500;
 }
 
 .question{
