--- a/styles/timer.module.scss
+++ b/styles/timer.module.scss
@@ -11,8 +11,8 @@
 .bomb::before,
 .bomb::after {
   padding: 0;
-  color: black;
-  content: "爆弾";
+  color: white;
+  content: "Good";
   position: absolute;
   width: 100%;
   height: 100%;
